--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
+    "firebaseui": "^6.1.0",
+    "firebaseui-react": "^1.3.14",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "react": "^19.0.0",
