--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           # Clone the repositories
-          sudo git clone https://github.com/Lin-Jacob/TerpNotesFE.git /home/ubuntu/terpnotes/frontend
-          sudo git clone https://github.com/olaniyisalami/TerpNotesBE.git /home/ubuntu/terpnotes/backend
+          sudo git clone git@github.com:Lin-Jacob/TerpNotesFE.git /home/ubuntu/terpnotes/frontend
+          sudo git clone git@github.com:olaniyisalami/TerpNotesBE.git /home/ubuntu/terpnotes/backend
 
           # Navigate to the frontend and build it
           sudo cd /home/ubuntu/terpnotes/frontend
