--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -21,26 +21,27 @@ jobs:
     - name: Deploy to EC2
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-          sudo rm -rf /home/ubuntu/terpnotes
-          sudo mkdir /home/ubuntu/terpnotes
+          sudo -i <<'INNER_EOF'
+            set -e
 
-          eval `ssh-agent -s`
-          ssh-add ~/.ssh/terpnotes_git
+            rm -rf /home/ubuntu/terpnotes
+            mkdir -p /home/ubuntu/terpnotes
 
-          # Clone the repositories
-          git clone git@github.com:Lin-Jacob/TerpNotesFE.git /home/ubuntu/terpnotes/frontend
-          git clone git@github.com:olaniyisalami/TerpNotesBE.git /home/ubuntu/terpnotes/backend
+            # Clone the repositories
+            git clone git@github.com:Lin-Jacob/TerpNotesFE.git /home/ubuntu/terpnotes/frontend
+            git clone git@github.com:olaniyisalami/TerpNotesBE.git /home/ubuntu/terpnotes/backend
 
-          # Navigate to the frontend and build it
-          cd /home/ubuntu/terpnotes/frontend
-          sudo npm install --legacy-peer-deps
-          sudo npm run build
+            # Navigate to the frontend and build it
+            cd /home/ubuntu/terpnotes/frontend
+            npm install --legacy-peer-deps
+            npm run build
 
-          # Navigate to the backend and set up
-          sudo cd /home/ubuntu/terpnotes/backend
-          sudo pip install -r requirements.txt
+            # Navigate to the backend and set up
+            cd /home/ubuntu/terpnotes/backend
+            pip install -r requirements.txt
 
-          # Run backend
-          sudo pkill -f app.py || true
-          sudo nohup python3 app.py &
+            # Run backend
+            pkill -f app.py || true
+            nohup python3 app.py > /home/ubuntu/terpnotes/backend/backend.log 2>&1 &
+          INNER_EOF
         EOF
